--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <link href="/styles/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/styles/bootstrap.min.css}"/>
+</head>
 <body>
-    <div th: fragment = "copy">&copy; 2024 PTE MIK</div>
+<!--/*  Multiple fragments may be defined in one file */-->
+<div th:fragment="footer" th:align="center">
+    &copy; <span th:text="${#temporals.format(#temporals.createNow(), 'yyyy')}">2017</span>
+    <span>My Awesome App</span>
+</div>
+<div th:fragment="footer-admin" th:align="center">
+    &copy; <span th:text="${#temporals.format(#temporals.createNow(), 'yyyy')}">2017</span>
+    <span>My Awesome App </span><span th:text="${@environment.getProperty('app.version')}"></span>
+</div>
 </body>
 </html>
